kubernetes/deployment-service-booking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: online-event-booking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: 22i1351/booking-service:latest
          ports:
            - containerPort: 5006
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: online-event-booking
spec:
  type: ClusterIP
  selector:
    app: booking-service
  ports:
    - protocol: TCP
      port: 5006
      targetPort: 5006
