kubernetes/deployment-service-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: online-event-booking
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: 22i1351/user-service:latest
          ports:
            - containerPort: 5008
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: online-event-booking
spec:
  type: ClusterIP
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 5008
      targetPort: 5008
